--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <h1 id="crypto-price"> --- </h1>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -39,5 +40,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+        if ('serviceWorker' in navigator) {
+          navigator.serviceWorker.register('/src/service-worker.js');
+        }
+    </script>
   </body>
 </html>
