added functioning service worker

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <h1 id="crypto-price"> --- </h1>
+    <div style="display: flex; text-align: center;">
+      <h1  style="color:white;"> Bitcoin LIVE TRADING price : $    </h1>
+      <h1 id="crypto-price" style="color:blue;"> --- </h1>
+    </div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
