--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div style="display: flex; text-align: center;">
-      <h1  style="color:white;"> Bitcoin LIVE TRADING price : $    </h1>
+      <h1  style="color:white;"> Bitcoin LIVE TRADING USD: $    </h1>
       <h1 id="crypto-price" style="color:blue;"> --- </h1>
     </div>
     <div id="root"></div>
